<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CK">

    <!-- TODO: Update blank fragment layout -->
    <EditText
        android:id="@+id/edtCK"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:hint="@string/enter_temperature_in_celsius"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/echo"
        android:inputType="number"
        />
    <Button
        android:id="@+id/btnNextCK"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:text="@string/next"
        android:textColor="@color/echo"
        android:textSize="15sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/txtCK"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_margin="100dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:text="@string/temperature_in_kelvin" />

</FrameLayout>